[tool.poetry]
name = "cryptotracker"
version = "0.1.0"
description = ""
authors = ["IvanIsak2000 <vingving648@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
sqlmodel = "^0.0.14"
python-dotenv = "^1.0.1"
aiogram = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
